[package]
name = "dioxustest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.0-alpha.2", features = ["desktop", "fullstack"]}
searchuser = {path="src/lib/"}
tokio = "1.36.0"
